--- a/AWS_CW_cfn_push_stats/template.yaml
+++ b/AWS_CW_cfn_push_stats/template.yaml
@@ -4,10 +4,8 @@ Description: |
 Parameters:
   KeyName:
     Type: String
-    Default: heat_key
   InstanceType:
     Type: String
-    Default: m1.micro
   ImageId:
     Type: String
   StackStart:
@@ -16,9 +14,7 @@ Parameters:
   ConsumeStopSeconds:
     Description: Seconds after StackStart when memory should be released
     Type: Number
-    Default: '360'
 Resources:
-  Recorder: {Type: 'OS::Heat::EventRecorder'}
   CfnUser: {Type: 'AWS::IAM::User'}
   SmokeKeys:
     Type: AWS::IAM::AccessKey
@@ -66,11 +62,6 @@ Resources:
       Threshold: '70'
       AlarmActions:
       - {Ref: ServerScaleUpPolicy}
-        {'Fn::GetAtt': ['Recorder', 'AlarmUrl']}
-      InsufficientDataActions:
-      - {'Fn::GetAtt': ['Recorder', 'AlarmUrl']}
-      OkActions:
-        {'Fn::GetAtt': ['Recorder', 'AlarmUrl']}
       Dimensions:
       - Name: AutoScalingGroupName
         Value: {Ref: ServerGroup}
@@ -87,11 +78,6 @@ Resources:
       Threshold: '55'
       AlarmActions:
       - {Ref: ServerScaleDownPolicy}
-        {'Fn::GetAtt': ['Recorder', 'AlarmUrl']}
-      InsufficientDataActions:
-      - {'Fn::GetAtt': ['Recorder', 'AlarmUrl']}
-      OkActions:
-        {'Fn::GetAtt': ['Recorder', 'AlarmUrl']}
       Dimensions:
       - Name: AutoScalingGroupName
         Value: {Ref: ServerGroup}
@@ -135,19 +121,19 @@ Resources:
                   import psutil
                   import time
                   import datetime
+                  import sys
+                  import syslog
                   a = []
                   while time.time() < StackStart + ConsumeStopSeconds:
                       vm = psutil.virtual_memory()
-                      print vm.percent
+                      syslog.syslog(syslog.LOG_INFO, 'consume mem %s' % vm.percent)
                       if vm.percent < 70:
                           a.append(' ' * 10**7)
                       time.sleep(8)
+                  sys.exit(0)
               mode: '000700'
               owner: root
               group: root
-          packages:
-            yum:
-              python-psutil: []
     Properties:
       ImageId: {Ref: ImageId}
       InstanceType: {Ref: InstanceType}
@@ -156,14 +142,15 @@ Resources:
       UserData:
         Fn::Base64:
           Fn::Replace:
-          - {ConsumeStopSeconds: {Ref: ConsumeStopSeconds}}
+          - 'AWS::StackName': {Ref: 'AWS::StackName'}
+            'AWS::Region': {Ref: 'AWS::Region'}
           - |
             #!/bin/bash -v
-            rm /etc/localtime
-            ln -s /usr/share/zoneinfo/Australia/Melbourne /etc/localtime
-            /opt/aws/bin/cfn-init
+            /opt/aws/bin/cfn-init -s AWS::StackName -r LaunchConfig --region AWS::Region
+            # yum make-cache gobbles up the whole of root.
+            rm -rf /var/cache/yum/
             # report on memory consumption every 4 seconds
-            /root/watch_loop &
+            at -q b -f /root/watch_loop now
             # ramp up memory consumption until it is over 70%
             # then exits ConsumeStopSeconds seconds after stack launch
             /root/consume_memory &
