--- a/Ceilometer_cfn_push_stats/template.yaml
+++ b/Ceilometer_cfn_push_stats/template.yaml
@@ -18,7 +18,6 @@ Parameters:
     Type: Number
     Default: '360'
 Resources:
-  Recorder: {Type: 'OS::Heat::EventRecorder'}
   CfnUser: {Type: 'AWS::IAM::User'}
   SmokeKeys:
     Type: AWS::IAM::AccessKey
@@ -67,11 +66,6 @@ Resources:
       threshold: '50'
       alarm_actions:
       - {"Fn::GetAtt": [ServerScaleUpPolicy, AlarmUrl]}
-        {'Fn::GetAtt': ['Recorder', 'AlarmUrl']}
-      insufficient_data_actions:
-      - {'Fn::GetAtt': ['Recorder', 'AlarmUrl']}
-      ok_actions:
-        {'Fn::GetAtt': ['Recorder', 'AlarmUrl']}
       matching_metadata: {'metadata.user_metadata.server_group': 'ServerGroup'}
       comparison_operator: gt
   CPUAlarmLow:
@@ -84,12 +78,7 @@ Resources:
       evaluation_periods: '1'
       threshold: '15'
       alarm_actions:
-      - {"Fn::GetAtt": [WebServerScaleDownPolicy, AlarmUrl]}
-        {'Fn::GetAtt': ['Recorder', 'AlarmUrl']}
-      insufficient_data_actions:
-      - {'Fn::GetAtt': ['Recorder', 'AlarmUrl']}
-      ok_actions:
-        {'Fn::GetAtt': ['Recorder', 'AlarmUrl']}
+      - {"Fn::GetAtt": [ServerScaleDownPolicy, AlarmUrl]}
       matching_metadata: {'metadata.user_metadata.server_group': 'WebServerGroup'}
       comparison_operator: lt
   LaunchConfig:
@@ -137,9 +126,6 @@ Resources:
               mode: '000700'
               owner: root
               group: root
-          packages:
-            yum:
-              python-psutil: []
     Properties:
       ImageId: {Ref: ImageId}
       InstanceType: {Ref: InstanceType}
@@ -148,14 +134,15 @@ Resources:
       UserData:
         Fn::Base64:
           Fn::Replace:
-          - {ConsumeStopSeconds: {Ref: ConsumeStopSeconds}}
+          - 'AWS::StackName': {Ref: 'AWS::StackName'}
+            'AWS::Region': {Ref: 'AWS::Region'}
           - |
             #!/bin/bash -v
-            rm /etc/localtime
-            ln -s /usr/share/zoneinfo/Australia/Melbourne /etc/localtime
-            /opt/aws/bin/cfn-init
+            /opt/aws/bin/cfn-init -s AWS::StackName -r LaunchConfig --region AWS::Region
+            # yum make-cache gobbles up the whole of root.
+            rm -rf /var/cache/yum/
             # report on memory consumption every 4 seconds
-            /root/watch_loop &
+            at -q b -f /root/watch_loop now
             # ramp up memory consumption until it is over 70%
             # then exits ConsumeStopSeconds seconds after stack launch
             /root/consume_memory &
