Add new images and fix metadata.

--- a/AWS_CW/env.yaml
+++ b/AWS_CW/env.yaml
@@ -2,9 +2,9 @@
 parameters:
   KeyName: heat_key
   InstanceType: m1.micro
-  ImageId: F18-x86_64-cfntools
+  ImageId: Fedora-x86_64-20-20140618-sda
   ConsumeStopSeconds: '320'
 
 resource_registry:
-    "AWS::CloudWatch::Alarm": "file:///home/asalkeld/stack/heat/etc/heat/templates/AWS_CloudWatch_Alarm.yaml"
+    "AWS::CloudWatch::Alarm": "file:///etc/heat/templates/AWS_CloudWatch_Alarm.yaml"
     #"AWS::CloudWatch::Alarm": "OS::Heat::CWLiteAlarm"
