--- a/Ceilometer/template.yaml
+++ b/Ceilometer/template.yaml
@@ -51,7 +51,7 @@ Resources:
     Type: OS::Ceilometer::Alarm
     Properties:
       description: Scale-up if the average CPU > 50% for 1 minute
-      counter_name: cpu_util
+      meter_name: cpu_util
       statistic: avg
       period: '60'
       evaluation_periods: '1'
@@ -64,7 +64,7 @@ Resources:
     Type: OS::Metering::Alarm
     Properties:
       description: Scale-down if the average CPU < 15% for 1 minute
-      counter_name: cpu_util
+      meter_name: cpu_util
       statistic: avg
       period: '60'
       evaluation_periods: '1'
