--- a/provider/AWS_CloudWatch_Alarm.yaml
+++ b/provider/AWS_CloudWatch_Alarm.yaml
@@ -66,7 +66,7 @@ Resources:
         Ref: AlarmDescription
       enabled:
         Ref: ActionsEnabled
-      counter_name:
+      meter_name:
         Ref: MetricName
       period:
         Ref: Period
