--- a/Ceilometer_cfn_push_stats/template.yaml
+++ b/Ceilometer_cfn_push_stats/template.yaml
@@ -39,8 +39,6 @@ Resources:
       LaunchConfigurationName: {Ref: LaunchConfig}
       MinSize: '1'
       MaxSize: '3'
-      Tags:
-      - {Key: metering.server_group, Value: ServerGroup}
   ServerScaleUpPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
     Properties:
@@ -66,7 +64,7 @@ Resources:
       threshold: '50'
       alarm_actions:
       - {"Fn::GetAtt": [ServerScaleUpPolicy, AlarmUrl]}
-      matching_metadata: {'metadata.metering.server_group': 'ServerGroup'}
+      matching_metadata: {'metadata.metering.AutoScalingGroupName': {Ref: ServerGroup}}
       comparison_operator: gt
   CPUAlarmLow:
     Type: OS::Ceilometer::Alarm
@@ -79,7 +77,7 @@ Resources:
       threshold: '15'
       alarm_actions:
       - {"Fn::GetAtt": [ServerScaleDownPolicy, AlarmUrl]}
-      matching_metadata: {'metadata.metering.server_group': 'WebServerGroup'}
+      matching_metadata: {'metadata.metering.AutoScalingGroupName': {Ref: ServerGroup}}
       comparison_operator: lt
   LaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
