--- a/AWS_CW_cfn_push_stats/env.yaml
+++ b/AWS_CW_cfn_push_stats/env.yaml
@@ -2,5 +2,5 @@
 parameters:
   KeyName: heat_key
   InstanceType: m1.micro
-  ImageId: F18-x86_64-cfntools
+  ImageId: Fedora-x86_64-20-20140618-sda
   ConsumeStopSeconds: '320'
